changed the navbar positioning, as well as overlapping issues

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ ul {
     list-style: none;
 }
 
+
 /* utility classes */
 
 .small-bold-text {
@@ -116,6 +117,7 @@ ul {
     background-image: url('asset\ 30.png');
     background-color: #4fb3d4;
     background-size: 300px;
+    height:50px;
 }
 
 .banner-text {
@@ -125,18 +127,20 @@ ul {
 }
 
 /* nav bar */
-
 .main-nav {
-    margin-top: 40px;
     justify-content: space-between;
+    position:flex;
+   min-width:100vw;
+    background-color: #ccc;
+    transition: all 0.3s ease;
+}
 
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 10px 0;
-    margin-left: 50px;
-
-    background-color: #ccc
+.main-nav-sticky{
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    z-index: 1000;
 }
 
 .company-logo img {
@@ -197,6 +201,7 @@ ul {
 @media screen and (max-width: 768px) {
     .nav-links {
         display: none;
+        width: 100vw;
     }
 
     .nav-toggle {
@@ -206,12 +211,22 @@ ul {
     .nav-links.active {
         display: block;
     }
+
+    .nav-links ul{
+        display:flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
 }
 
 
 /* header section */
 
 header {
+    /* margin-top: 30px; */
     padding: 50px var(--padding-inline-section) 0;
 }
 
@@ -277,6 +292,7 @@ header {
     justify-content: space-between;
     gap: 20px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .features-card {
